# glowmarkt

./: CMakeLists.txt  README.md  arduinoGlow.ino  gasToSQL.c  gas_usage.sql  jParse.c  mkc.sh  mkconfig.c  mosq.c  mosqBloop4eva.c  mosqBoth.c  mosqElec.c  mosqGas.c  mosqJSON.c  readCfg.c
